--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="bootstrap/bootstrap-css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
 </head>
 
 <body>
     <nav id="main-nav" class="navbar navbar-expand-lg navbar-light fixed-top">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#">Jakub Kicek</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -27,8 +28,14 @@
     <header>
         <div id="header-content">
             <div id="par_1" data-speed="0" class="paralax"></div>
-            <div id="par_2" data-speed="20" class="paralax"></div>
-            <div id="par_3" data-speed="10" class="paralax"></div>
+            <div id="par_2" data-speed="0" class="paralax"></div>
+            <div id="par_3" data-speed="5" class="paralax"></div>
+            <div id="par_4" data-speed="3" class="paralax"></div>
+            <div id="par_5" data-speed="10" class="paralax"></div>
+            <div id="par_6" data-speed="12" class="paralax"></div>
+            <div id="par_7" data-speed="10" class="paralax"></div>
+            <div id="par_8" data-speed="2" class="paralax"></div>
+            <div id="par_9" data-speed="0" class="paralax"></div>
         </div>
     </header>
     
