overflow: hidden; na headerze bo gorki wychodzily

--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@
     <header>
         <div id="header-content">
             <div id="par_1" data-speed="0" class="paralax"></div>
-            <div id="par_2" data-speed="0" class="paralax"></div>
-            <div id="par_3" data-speed="5" class="paralax"></div>
-            <div id="par_4" data-speed="3" class="paralax"></div>
-            <div id="par_5" data-speed="10" class="paralax"></div>
-            <div id="par_6" data-speed="12" class="paralax"></div>
+            <div id="par_2" data-speed="60" class="paralax"></div>
+            <div id="par_3" data-speed="48" class="paralax"></div>
+            <div id="par_4" data-speed="36" class="paralax"></div>
+            <div id="par_5" data-speed="19" class="paralax"></div>
+            <div id="par_6" data-speed="21" class="paralax"></div>
             <div id="par_7" data-speed="10" class="paralax"></div>
             <div id="par_8" data-speed="2" class="paralax"></div>
             <div id="par_9" data-speed="0" class="paralax"></div>
+            <div id="smartphone"></div>
         </div>
     </header>
     
