poprawka duzej gorki, predkosc

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">About</a>
+                <a class="nav-item nav-link" href="#">About</a>
                 <a class="nav-item nav-link" href="#">Skills</a>
                 <a class="nav-item nav-link" href="#">Contact</a>
             </div>
@@ -28,7 +28,7 @@
     <header>
         <div id="header-content">
             <div id="par_1" data-speed="0" class="paralax"></div>
-            <div id="par_2" data-speed="60" class="paralax"></div>
+            <div id="par_2" data-speed="50" class="paralax"></div>
             <div id="par_3" data-speed="48" class="paralax"></div>
             <div id="par_4" data-speed="36" class="paralax"></div>
             <div id="par_5" data-speed="19" class="paralax"></div>
