--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
         </div>
     </header>
 
-    <section>
-
+    <section id="about" class="container">
+        <div class="row">
+            <div class="col col-sm-6">
+            <div id="face"></div>
+            </div>
+            <div class="col-12 col-sm-6">
+                <article><h2>Yeeep. That's me</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae odio sunt natus cum eligendi sed repellendus, dolorum nobis non cupiditate. Aliquam quae nemo unde dignissimos, nihil ducimus, molestiae tempora nisi consectetur quia aut doloremque eum, veritatis eveniet incidunt. Omnis eligendi aspernatur officiis quo earum maxime, vero et dolore nam iusto incidunt quibusdam illum non unde ratione sequi, soluta corporis? A repellat velit, et earum quae fugiat cum quis nulla illum corporis. Sapiente nihil enim commodi dignissimos mollitia harum molestias, nulla error possimus deleniti sint debitis, facilis fugit magni autem molestiae incidunt, aperiam officia eos delectus atque. In ipsum totam quas.</article>
+            </div>
+        </div>
     </section>
 
     <script src="js/jquery.js"></script>
