--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link flex-item" href="#">Cześć!</a>
+                    <a class="nav-link flex-item" href="#about">Cześć!</a>
                 </li>
                 <li class="nav-item flex-item">
-                    <a class="nav-link" href="#">Moje umiejętności</a>
+                    <a class="nav-link" href="#skills">Moje umiejętności</a>
                 </li>
                 <li class="nav-item flex-item">
-                    <a class="nav-link" href="#">Kontakt</a>
+                    <a class="nav-link" href="#contact">Kontakt</a>
                 </li>
             </ul>
         </div>
@@ -38,10 +38,10 @@
         <div id="header-content">
             <div id="par_1" data-speed="0" class="paralax"></div>
             <div id="par_2" data-speed="50" class="paralax"></div>
-            <div id="par_3" data-speed="48" class="paralax"></div>
-            <div id="par_4" data-speed="36" class="paralax"></div>
-            <div id="par_5" data-speed="19" class="paralax"></div>
-            <div id="par_6" data-speed="21" class="paralax"></div>
+            <div id="par_3" data-speed="55" class="paralax"></div>
+            <div id="par_4" data-speed="50" class="paralax"></div>
+            <div id="par_5" data-speed="26" class="paralax"></div>
+            <div id="par_6" data-speed="30" class="paralax"></div>
             <div id="par_7" data-speed="10" class="paralax"></div>
             <div id="par_8" data-speed="2" class="paralax"></div>
             <div id="par_9" data-speed="0" class="paralax"></div>
@@ -52,14 +52,12 @@
     <section id="about">
         <div class="container">
             <div class="row">
-                <div class="col-sm-12 col-md-5 col-lg-6">
+                <div class="col-sm-12 col-lg-6">
                     <div id="face"></div>
                 </div>
-                <div class="d-none d-md-block d-lg-none col-md-2">
-                </div>
-                <div class="col-sm-12 col-md-5 col-lg-6">
+                <div class="col-sm-12  col-lg-6">
                     <article class="text-justify">
-                        <h2 class="text-center">Yeeep. That's me</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae odio sunt natus cum eligendi sed repellendus, dolorum nobis non cupiditate. Aliquam quae nemo unde dignissimos, nihil ducimus, molestiae tempora nisi consectetur quia aut doloremque eum, veritatis eveniet incidunt. Omnis eligendi aspernatur officiis quo earum maxime, vero et dolore nam iusto incidunt quibusdam illum non unde ratione sequi, soluta corporis? A repellat velit, et earum quae fugiat cum quis nulla illum corporis. Sapiente nihil enim commodi dignissimos mollitia harum molestias, nulla error possimus deleniti sint debitis, facilis fugit magni autem molestiae incidunt, aperiam officia eos delectus atque. In ipsum totam quas.</article>
+                        <h2 class="text-center">Cześć!</h2></article>
                 </div>
             </div>
         </div>
@@ -68,43 +66,43 @@
     <section id="skills">
         <div class="container">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-lg-6">
                     <div id="my-skills">
                         <article class="text-justify">
                             <h2 class="text-center">Moje umięjętności</h2>
                         </article>
                     </div>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-12 col-lg-6">
                     <div id="my-skills" class="container">
                         <div class="row">
-                            <div class="col-sm-12 col-md-6 col-lg-3">
+                            <div class="col-sm-3 col-lg-3">
                                 <img src="img/skills/html5.svg" alt="">
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-3">
+                            <div class="col-sm-3 col-lg-3">
                                 <img src="img/skills/CSS3.svg" alt="">
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-3">
+                            <div class="col-sm-3 col-lg-3">
                                 <img src="img/skills/JS.svg" alt="">
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-3">
-                                <img src="img/skills/Git.svg" alt="">
+                            <div class="col-sm-3 col-lg-3">
+                                <img src="img/skills/WordPress.svg" alt="">
                             </div>
-                            <div class="col-sm-12 col-md-12 col-lg-6">
+                            <div class="col-sm-6 col-lg-6">
                                <figure>
                                 <img src="img/skills/JQuery.svg" alt="">
                                 </figure>
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-3">
+                            <div class="col-sm-3 col-lg-3">
                                 <img src="img/skills/Boostrap.svg" alt="">
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-3">
-                                <img src="img/skills/WordPress.svg" alt="">
-                            </div>
-                            <div class="col-sm-12 col-md-6 col-lg-3">
+                            <div class="col-sm-3 col-lg-3">
                                 <img src="img/skills/Sass.svg" alt="">
                             </div>
-                            <div class="col-sm-12 col-md-6 col-lg-4">
+                            <div class="col-sm-6 col-lg-6">
+                                <img src="img/skills/Git.svg" alt="">
+                            </div>
+                            <div class="col-sm-6 col-lg-6">
                                <figure>
                                 <img src="img/skills/AJAX.svg" alt="">
                                 </figure>
@@ -120,7 +118,7 @@
         <h2 class="text-center">Zatrudnij mnie!</h2>
         <div class="container">
             <div class="row">
-                <div class="sm-block col-sm-12 d-md-none">
+                <div class="sm-block col-sm-12 d-lg-none">
                     <form action="https://formspree.io/j.kicek@gmail.com" method="post" class="text-right">
                         <input name="name" type="text" class="form-control" placeholder="Imię i nazwisko">
                         <input name="email" type="email" class="form-control" placeholder="Email">
@@ -128,7 +126,7 @@
                         <input type="submit" class="btn btn-lg submitBtn" value="Wyślij">
                     </form>
                 </div>               
-                <div class="col-sm-12 d-md-none">
+                <div class="col-sm-12 d-lg-none">
                     <div id="socials" class="container">
                        <div class="row">
                        <div class="col-sm-3"><a href="" id="git"><i class="fab fa-github"></i></a></div>
@@ -141,7 +139,7 @@
                     </div>
                 </div>
                 </div>
-                <div class="d-none d-md-block col-md-6">
+                <div class="d-none d-lg-block col-lg-6">
                     <address class="text-left">
                        <br>
                         tel. +48 784 496 436<br>
@@ -154,7 +152,7 @@
                        </div>
                     </div>
                 </div>
-                <div class="d-none d-md-block col-md-6">
+                <div class="d-none d-lg-block col-lg-6">
                     <form action="https://formspree.io/j.kicek@gmail.com" method="post" class="text-right">
                         <input name="name" type="text" class="form-control" placeholder="Imię i nazwisko">
                         <input name="email" type="email" class="form-control" placeholder="Email">
