--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link flex-item" href="#about">Cześć!</a>
                 </li>
                 <li class="nav-item flex-item">
-                    <a class="nav-link" href="#skills">Moje umiejętności</a>
+                    <a class="nav-link" href="#skills">Umiejętności</a>
                 </li>
                 <li class="nav-item flex-item">
                     <a class="nav-link" href="#contact">Kontakt</a>
@@ -57,7 +57,7 @@
                 </div>
                 <div class="col-sm-12  col-lg-6">
                     <article class="text-justify">
-                        <h2 class="text-center">Cześć!</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus illum, quam odit animi, voluptates assumenda. Eum suscipit, laboriosam voluptatibus voluptas sapiente asperiores sunt odio repudiandae perferendis id ipsum aliquid possimus, quae tempora doloribus debitis sint eligendi non voluptatum vero modi deleniti voluptate rerum. Quaerat minus minima sapiente debitis molestias delectus!</article>
+                        <h2 class="text-center">Cześć!</h2>Nazywam się Jakub i tworzę strony internetowe.<br>Swoją przygodę z programowaniem rozpocząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms. Obecnie studiuję na Politechnice Warszawskiej na kierunku Elektronika. <br>Front-endem zajmuję się stosunkowo od niedawna i poszukuję zespołu, w którym będę mógł się dalej rozwijać.</article>
                 </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
                 <div class="col-sm-12 col-lg-6">
                     <div id="my-skills">
                         <article class="text-justify">
-                            <h2 class="text-center">Moje umięjętności</h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officia veniam harum, quis asperiores at tempore similique accusamus vitae reprehenderit laboriosam nulla omnis. Nam quos recusandae dolor pariatur tempora adipisci quae cumque deleniti, obcaecati eum voluptas itaque eos nihil eligendi hic culpa, nemo nobis in cupiditate iste sapiente. Nemo, repellendus, officia.
+                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu biblioteki React.js.
                         </article>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
         </div>
     </section>
     <section id="contact">
-        <h2 class="text-center">Zatrudnij mnie!</h2>
+        <h2 class="text-center">Zapraszam do kontaktu</h2>
         <div class="container-fluid">
             <div class="row">
                 <div class="d-none d-lg-block col-lg-3"></div>
@@ -131,7 +131,7 @@
                     <div id="socials1" class="container">
                         <div class="row">
                            <div class="col-sm-2"><a href="" id="li"><i class="fab fa-linkedin"></i></a></div>
-                            <div class="col-sm-2"><a href="" id="git"><i class="fab fa-github"></i></a></div>
+                            <div class="col-sm-2"><a href="https://github.com/jakubKicek/" id="git"><i class="fab fa-github"></i></a></div>
                             <div class="col-sm-8">
                                 <address class="text-right"><br>
                                     <p>tel. +48 784 496 436</p>
@@ -148,7 +148,7 @@
                     </address>
                     <div id="socials2" class="container">
                         <div class="row">
-                            <div class="col-sm-3"><a href="" id="git"><i class="fab fa-github"></i></a></div>
+                            <div class="col-sm-3"><a href="https://github.com/jakubKicek/" id="git"><i class="fab fa-github"></i></a></div>
                             <div class="col-sm-1"></div>
                             <div class="col-sm-3"><a href="" id="li"><i class="fab fa-linkedin"></i></a></div>
                         </div>
