dodany zapomniany link do linkedin

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 <div class="col-sm-12 d-lg-none">
                     <div id="socials1" class="container">
                         <div class="row">
-                           <div class="col-sm-2"><a href="" id="li"><i class="fab fa-linkedin"></i></a></div>
+                           <div class="col-sm-2"><a href="https://www.linkedin.com/in/jakub-kicek-25b65b16b/" id="li"><i class="fab fa-linkedin"></i></a></div>
                             <div class="col-sm-2"><a href="https://github.com/jakubKicek/" id="git"><i class="fab fa-github"></i></a></div>
                             <div class="col-sm-8">
                                 <address class="text-right"><br>
@@ -150,7 +150,7 @@
                         <div class="row">
                             <div class="col-sm-3"><a href="https://github.com/jakubKicek/" id="git"><i class="fab fa-github"></i></a></div>
                             <div class="col-sm-1"></div>
-                            <div class="col-sm-3"><a href="" id="li"><i class="fab fa-linkedin"></i></a></div>
+                            <div class="col-sm-3"><a href="https://www.linkedin.com/in/jakub-kicek-25b65b16b/" id="li"><i class="fab fa-linkedin"></i></a></div>
                         </div>
                     </div>
                 </div>
