poprawy kosmetyczne, font Lato itd

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!--FONTS-->
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 </head>
 
@@ -25,7 +26,7 @@
                     <a class="nav-link flex-item" href="#about">Cześć!</a>
                 </li>
                 <li class="nav-item flex-item">
-                    <a class="nav-link" href="#skills">Umiejętności</a>
+                    <a class="nav-link" href="#skills">Moje umiejętności</a>
                 </li>
                 <li class="nav-item flex-item">
                     <a class="nav-link" href="#contact">Kontakt</a>
@@ -69,7 +70,7 @@
                 <div class="col-sm-12 col-lg-6">
                     <div id="my-skills">
                         <article class="text-justify">
-                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu biblioteki React.js.
+                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu biblioteki React.js.
                         </article>
                     </div>
                 </div>
