--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                     <a class="nav-link" href="#skills">Moje umiejętności</a>
                 </li>
                 <li class="nav-item flex-item">
+                    <a class="nav-link" href="#my-projects">Portfolio</a>
+                </li>
+                <li class="nav-item flex-item">
                     <a class="nav-link" href="#contact">Kontakt</a>
                 </li>
             </ul>
@@ -112,8 +115,45 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
+    </section>
+    <section id="my-projects" class="col-sm-12">
+                    <h2>Zrealizowane projekty</h2>
+                    <div id="cyberpunkers-generator" class="project container">
+                        <div class="row">
+                            <div class="col-sm-12 d-lg-none project-desc-sm">
+                                <h3>Generator Cyberpunków</h3>
+                            </div>
+                            <div class="col-sm-12 col-lg-6">
+                               <div class="project-link">
+                                    <a href="http://cyberpunkers-generator.azurewebsites.net/">
+                                        <img src="img/projects/cyberpunkers-generator.png" alt="">
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="d-none d-lg-block col-lg-6">
+                                <h3>Generator Cyberpunków</h3>
+                                <article>
+                                     Aplikacja React.js - generator postaci tła do gry fabularnej Cyberpunk 2020.
+                                     Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
+                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reacstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                     <br>
+                                     W przyszłości chcę stworzyć w ten sposób generatory postaci do innych gier oraz platformę z takimi pomocami dla graczy.         
+                                </article>
+                            </div>
+                            <div class="col-sm-12 d-lg-none">
+                                <article>
+                                     Aplikacja React.js - generator postaci tła do gry fabularnej Cyberpunk 2020.
+                                     Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
+                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reacstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                     <br>
+                                     W przyszłości chcę stworzyć w ten sposób generatory postaci do innych gier oraz platformę z takimi pomocami dla graczy.   
+                                </article>
+                            </div>
+                        </div>
+                    </div>
     </section>
     <section id="contact">
         <h2 class="text-center">Zapraszam do kontaktu</h2>
