--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                 <article>
                                      Aplikacja React.js - generator postaci tła do gry fabularnej Cyberpunk 2020.
                                      Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
-                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reacstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
                                      <br>
                                      W przyszłości chcę stworzyć w ten sposób generatory postaci do innych gier oraz platformę z takimi pomocami dla graczy.         
                                 </article>
@@ -149,7 +149,7 @@
                                 <article>
                                      Aplikacja React.js - generator postaci tła do gry fabularnej Cyberpunk 2020.
                                      Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
-                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reacstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
                                      <br>
                                      W przyszłości chcę stworzyć w ten sposób generatory postaci do innych gier oraz platformę z takimi pomocami dla graczy.   
                                 </article>
