--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-sm-12  col-lg-6">
                     <article class="text-justify">
-                        <h2 class="text-center">Cześć!</h2>Nazywam się Jakub i tworzę strony internetowe.<br>Swoją przygodę z programowaniem rozpocząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms. Obecnie studiuję na Politechnice Warszawskiej na kierunku Elektronika. <br>Front-endem zajmuję się stosunkowo od niedawna i poszukuję zespołu, w którym będę mógł się dalej rozwijać.</article>
+                        <h2 class="text-center">Cześć!</h2>Nazywam się Jakub i tworzę strony internetowe.<br>Swoją przygodę z programowaniem rozpocząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms. Obecnie studiuję na Politechnice Warszawskiej na kierunku Telekomunikacja. <br>Front-endem zajmuję się stosunkowo od niedawna i poszukuję zespołu, w którym będę mógł się dalej rozwijać.</article>
                 </div>
             </div>
         </div>
