simpleUsersList project added

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-sm-12  col-lg-6">
                     <article class="text-justify">
-                        <h2 class="text-center">Cześć!</h2>Nazywam się Jakub i tworzę strony internetowe.<br>Swoją przygodę z programowaniem rozpocząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms. Obecnie studiuję na Politechnice Warszawskiej na kierunku Telekomunikacja. <br>Front-endem zajmuję się stosunkowo od niedawna i poszukuję zespołu, w którym będę mógł się dalej rozwijać.</article>
+                        <h2 class="text-center">Cześć!</h2>Nazywam się Jakub i tworzę strony internetowe.<br>Swoją przygodę z programowaniem rozpocząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms.<br><br>Front-endem zajmuję się stosunkowo od niedawna i poszukuję zespołu, w którym będę mógł się dalej rozwijać.</article>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 <div class="col-sm-12 col-lg-6">
                     <div id="my-skills">
                         <article class="text-justify">
-                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu biblioteki React.js.
+                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę w używaniu frameworka Angular.js.
                         </article>
                     </div>
                 </div>
@@ -124,37 +124,59 @@
     <section id="my-projects" class="col-sm-12">
                     <h2>Zrealizowane projekty</h2>
                     <div id="cyberpunkers-generator" class="project container">
-                        <div class="row">
-                            <div class="col-sm-12 d-lg-none project-desc-sm">
-                                <h3>Generator Cyberpunków</h3>
+                            <div class="row">
+                                    <div class="col-sm-12 d-lg-none project-desc-sm">
+                                        <h3>Lista użytkowników</h3>
+                                    </div>
+                                    <div class="col-sm-12 col-lg-6">
+                                       <div class="project-link">
+                                            <a href="https://jakubkicek.github.io/simpleUsersApp/">
+                                                <img src="img/projects/simpleUsersApp.png" alt="zrzut ekranu, generator cyberpunków">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="d-none d-lg-block col-lg-6">
+                                        <h3>Lista użytkowników</h3>
+                                        <article>
+                                                Przykład prostego narzędzia zarządzania rejestrem użytkowników. Aplikacja zbudowana przy użyciu frameworka Angular.js. 
+                                                Wykorzystuje zewnętrzną <a href="https://jsonplaceholder.typicode.com/users">bazę użytkowników</a> i pozwala na edycję oraz usuwanie pozycji z rejestru.
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-12 d-lg-none">
+                                            <article>
+                                                    Przykład prostego narzędzia zarządzania rejestrem użytkowników. Aplikacja zbudowana przy użyciu frameworka Angular.js. 
+                                                    Wykorzystuje zewnętrzną <a href="https://jsonplaceholder.typicode.com/users">bazę użytkowników</a> i pozwala na edycję oraz usuwanie pozycji z rejestru.
+                                            </article>
+                                    </div>
                             </div>
-                            <div class="col-sm-12 col-lg-6">
-                               <div class="project-link">
-                                    <a href="http://cyberpunkers-generator.azurewebsites.net/">
-                                        <img src="img/projects/cyberpunkers-generator.png" alt="">
-                                    </a>
-                                </div>
+                    </div>
+                    <div id="users-list" class="project container">
+                            <div class="row">
+                                    <div class="col-sm-12 d-lg-none project-desc-sm">
+                                        <h3>Generator Cyberpunków</h3>
+                                    </div>
+                                    <div class="col-sm-12 col-lg-6">
+                                       <div class="project-link">
+                                            <a href="http://cyberpunkers-generator.azurewebsites.net/">
+                                                <img src="img/projects/cyberpunkers-generator.png" alt="zrzut ekranu, generator cyberpunków">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="d-none d-lg-block col-lg-6">
+                                        <h3>Generator Cyberpunków</h3>
+                                        <article>
+                                             Generator postaci tła do gry fabularnej Cyberpunk 2020.
+                                             Do napisania aplikacji użyłem biblioteki React.js, a layout zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-12 d-lg-none">
+                                        <article>
+                                             Generator postaci tła do gry fabularnej Cyberpunk 2020.
+                                             Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
+                                             Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                        </article>
+                                    </div>
                             </div>
-                            <div class="d-none d-lg-block col-lg-6">
-                                <h3>Generator Cyberpunków</h3>
-                                <article>
-                                     Aplikacja React.js - generator postaci tła do gry fabularnej Cyberpunk 2020.
-                                     Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
-                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
-                                     <br>
-                                     W przyszłości chcę stworzyć w ten sposób generatory postaci do innych gier oraz platformę z takimi pomocami dla graczy.         
-                                </article>
-                            </div>
-                            <div class="col-sm-12 d-lg-none">
-                                <article>
-                                     Aplikacja React.js - generator postaci tła do gry fabularnej Cyberpunk 2020.
-                                     Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
-                                     Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
-                                     <br>
-                                     W przyszłości chcę stworzyć w ten sposób generatory postaci do innych gier oraz platformę z takimi pomocami dla graczy.   
-                                </article>
-                            </div>
-                        </div>
                     </div>
     </section>
     <section id="contact">
@@ -212,7 +234,7 @@
 
 
     <footer>
-        <p class="text-center">Copyright &copy; 2018 Jakub Kicek<span> Designed with the <a href="https://www.vecteezy.com/">Vecteezy Editor</a></span></p>
+        <p class="text-center">Copyright &copy; 2019 Jakub Kicek<span> Designed with the <a href="https://www.vecteezy.com/">Vecteezy Editor</a></span></p>
     </footer>
 
     <script src="js/jquery.js"></script>
