--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-sm-12 col-lg-6">
                     <div id="my-skills">
                         <article class="text-justify">
-                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę w używaniu frameworka Angular.js.
+                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu frameworka Angular.js.
                         </article>
                     </div>
                 </div>
