--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link flex-item" href="#about">Cześć!</a>
+                    <a class="nav-link flex-item" href="#about">O mnie</a>
                 </li>
                 <li class="nav-item flex-item">
                     <a class="nav-link" href="#skills">Moje umiejętności</a>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col-sm-12  col-lg-6">
                     <article class="text-justify">
-                        <h2 class="text-center">Cześć!</h2>Nazywam się Jakub i tworzę strony internetowe.<br>Swoją przygodę z programowaniem rozpocząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms.<br><br>Front-endem zajmuję się stosunkowo od niedawna i poszukuję zespołu, w którym będę mógł się dalej rozwijać.</article>
+                        <h2 class="text-center">Cześć!</h2>Jestem studentem robotyki na Politechnice Warszawskiej, ale zajmuję się też tworzeniem aplikacji i stron internetowych.<br>Z programowaniem zacząłem ponad dekadę temu od środowiska Scratch i programowalnych zabawek LEGO Mindstorms. <br>Ukończyłem kurs bootcampowy, ale wciąż poszukuję okazji do nauki nowych i rozwoju już posiadanych umiejętności.</article>
                 </div>
             </div>
         </div>
@@ -75,7 +75,7 @@
                 <div class="col-sm-12 col-lg-6">
                     <div id="my-skills">
                         <article class="text-justify">
-                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu frameworka Angular.js.
+                            <h2 class="text-center">Co potrafię?</h2>Opanowałem prezentowane technologie na poziomie Junior Developer. Pomógł mi w tym certyfikowany kurs prowadzony przez szkołę programowania <a id="a108" href="https://akademia108.pl/">Akademia 108</a>, który ukończyłem w sierpniu 2018 roku.<br>Ponadto samodzielnie szkolę się w używaniu frameworka Angular.
                         </article>
                     </div>
                 </div>
@@ -105,15 +105,17 @@
                             <div class="col-sm-3 col-lg-3">
                                 <img src="img/skills/Sass.svg" alt="">
                             </div>
-                            <div class="col-sm-6 col-lg-6">
-                                <img src="img/skills/Git.svg" alt="">
-                            </div>
                             <div class="col-sm-4 col-lg-6">
                                 <figure>
-                                    <img src="img/skills/AJAX.svg" alt="">
+                                    <img src="img/skills/Git.svg" alt="">
                                 </figure>
                             </div>
-
+                            <div class="col-sm-3 col-lg-3">
+                                <img src="img/skills/angular.svg" alt="">
+                            </div>
+                            <div class="col-sm-3 col-lg-3">
+                                <img src="img/skills/TS.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -123,7 +125,7 @@
     </section>
     <section id="my-projects" class="col-sm-12">
                     <h2>Zrealizowane projekty</h2>
-                    <div id="cyberpunkers-generator" class="project container">
+                    <div id="users-list" class="project container">
                             <div class="row">
                                     <div class="col-sm-12 d-lg-none project-desc-sm">
                                         <h3>Lista użytkowników</h3>
@@ -131,7 +133,7 @@
                                     <div class="col-sm-12 col-lg-6">
                                        <div class="project-link">
                                             <a href="https://jakubkicek.github.io/simpleUsersApp/">
-                                                <img src="img/projects/simpleUsersApp.png" alt="zrzut ekranu, generator cyberpunków">
+                                                <img src="img/projects/simpleUsersApp.png" alt="zrzut ekranu, lista użytkowników">
                                             </a>
                                         </div>
                                     </div>
@@ -150,7 +152,8 @@
                                     </div>
                             </div>
                     </div>
-                    <div id="users-list" class="project container">
+                    <br>
+                    <div id="cyberpunkers-generator" class="project container">
                             <div class="row">
                                     <div class="col-sm-12 d-lg-none project-desc-sm">
                                         <h3>Generator Cyberpunków</h3>
@@ -174,6 +177,32 @@
                                              Generator postaci tła do gry fabularnej Cyberpunk 2020.
                                              Projekt wciąż jest rozwijany, pracuję między innymi nad bazą danych opartą na plikach JSON.
                                              Layout aplikacji zbudowałem używając <a href="https://reactstrap.github.io/">reactstrap</a>, biblioteki zawierającej react'owe komponenty Bootstrap 4.
+                                        </article>
+                                    </div>
+                            </div>
+                    </div>
+                    <br>
+                    <div id="portfolio-project" class="project container">
+                            <div class="row">
+                                    <div class="col-sm-12 d-lg-none project-desc-sm">
+                                        <h3>Portfolio</h3>
+                                    </div>
+                                    <div class="col-sm-12 col-lg-6">
+                                       <div class="project-link">
+                                            <a href="https://github.com/jakubKicek/jakub_kicek_portfolio">
+                                                <img src="img/projects/portfolio.png" alt="zrzut ekranu, portfolio">
+                                            </a>
+                                        </div>
+                                    </div>
+                                    <div class="d-none d-lg-block col-lg-6">
+                                        <h3>Portfolio</h3>
+                                        <article>
+                                             Do stworzenia tego projektu wykorzystałem bibliotekę jQuery (animacja headera i menu) oraz Bootstrap (layout strony).
+                                        </article>
+                                    </div>
+                                    <div class="col-sm-12 d-lg-none">
+                                        <article>
+                                             Do stworzenia tego projektu wykorzystałem bibliotekę jQuery (animacja headera i menu) oraz Bootstrap (layout strony).
                                         </article>
                                     </div>
                             </div>
